--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Helsingborg Style Guide</title>
+    <title>Helsingborg Event Widgets</title>
     <meta name="description" content="">
 
     <link rel="stylesheet" type="text/css" href="https://highlightjs.org/static/demo/styles/github-gist.css">
@@ -79,13 +79,54 @@
             <div class="grid-md-9">
                 <article>
                     <h1>Event API - WidgetExamples</h1>
-
                     <p class="lead">Welcome to the event manager widget examples page. Below are examples on how to utilizate the widget js-api. Please include the js-resource on your page before testing.</p>
-
                     <pre><code class="html">&lt;link rel="stylesheet" href="http://styleguide.dev/dist/css/hbg-prime.css"&gt;</code></pre>
-
-                    <pre><code class="html"></code></pre>
                 </article>
+
+                <article>
+                    <h2>Event List</h2>
+                    <pre><code class="html">&lt;div class="event-api" data-type="list" data-template-source="event-template" &gt&lt;div&gt;</code></pre>
+                </article>
+
+                <div class="box box-panel box-panel-primary">
+                    <h4 class="box-title">Dagens evenemang</h4>
+
+                    <ul class="event-api">
+                        <li class="event-loading-template"><i class="loading-dots" style="margin: 10px auto;"></i></li>
+
+                        <div class="template hidden">
+                            <li><a class="modal-event" data-event-id="{{event-id}}" href="#modal-event">{{event-title}}</a></li>
+                        </div>
+
+                        <div class="modal-template hidden">
+                            <div id="modal-target" class="modal modal-open modal-backdrop-1 modal-medium" tabindex="-1" role="dialog" aria-hidden="true">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <a class="btn btn-close" href="#close"></a>
+                                        <h2 class="modal-title">Gummi bears caramels</h2>
+                                    </div>
+                                    <div class="modal-body">
+                                        <article>
+                                            <p>Pastry sweet topping lollipop chocolate cake cake I love lollipop. Gummies I love sesame snaps oat cake candy tart. Cake sugar plum chupa chups croissant brownie I love pudding dragée. Caramels liquorice apple pie marshmallow jujubes apple pie soufflé. Lemon drops croissant toffee gummi bears caramels I love. Pudding biscuit wafer bonbon pie danish dragée caramels pastry.</p>
+                                            <p>Gingerbread I love jelly-o oat cake cookie. Icing sweet cookie sweet roll cotton candy sesame snaps candy canes I love muffin. Apple pie I love cotton candy sweet jelly-o cheesecake sweet roll. Marshmallow marshmallow jujubes. Jujubes danish lollipop sweet. Gummies I love tiramisu sugar plum.</p>
+                                            <p>Liquorice donut tart tart tiramisu tootsie roll cheesecake brownie. Chocolate bonbon dessert. Halvah ice cream I love marshmallow gummi bears pudding dessert cheesecake. Carrot cake I love tiramisu toffee toffee. I love jujubes chocolate cake toffee I love sweet sesame snaps. Tart dessert candy canes lemon drops cake lemon drops pudding jelly-o. Pie tart danish candy gummi bears marshmallow. Ice cream cheesecake chupa chups oat cake apple pie jujubes. Sweet wafer marshmallow. Croissant wafer I love ice cream tootsie roll.</p>
+                                            <p>Caramels bear claw biscuit chocolate cake I love. Tart cotton candy sweet liquorice. Carrot cake pastry donut cupcake tart. Tootsie roll I love cupcake carrot cake gingerbread I love donut. Lollipop gingerbread marshmallow brownie gummies apple pie tart donut. Chupa chups cupcake biscuit marshmallow croissant.</p>
+                                        </article>
+                                    </div>
+                                    </div><!-- /.modal-content -->
+                                <a href="#close" class="backdrop"></a>
+                            </div><!-- /.modal -->
+                        </div>
+
+                        <div class="error-template hidden">
+                            <li class="notice warning">
+                                <i class="fa fa-warning"></i> Whoopsie! We could not load the event's for today. Please try again later.
+                            </li>
+                        </div>
+
+                    </ul>
+                </div>
+
             </div>
         </div>
     </div>
@@ -103,6 +144,7 @@
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/highlight.min.js"></script>
     <script src="https://helsingborg-stad.github.io/styleguide-web-cdn/styleguide.dev/dist/js/hbg-prime.min.js"></script>
+    <script src="/assets/dist/js/packaged.js"></script>
 
     <script>
         $(function(){
