--- a/index.htm
+++ b/index.htm
@@ -144,7 +144,7 @@
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.0.0/highlight.min.js"></script>
     <script src="https://helsingborg-stad.github.io/styleguide-web-cdn/styleguide.dev/dist/js/hbg-prime.min.js"></script>
-    <script src="/assets/dist/js/packaged.js"></script>
+    <script src="./assets/dist/js/packaged.js"></script>
 
     <script>
         $(function(){
